python | learn flask | 190711

--- a/00_startcamp/day4/190711.md
+++ b/00_startcamp/day4/190711.md
@@ -33,3 +33,47 @@ cd day4/second_flask/
 
 nav>ul>(li>a)*3 Tab
 
+
+
+JSON Viewer - 크롬 웹스토어
+
+http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?key=430156241533f1d058c603178cc3ca0e&targetDt=20120101
+
+
+
+momentum - 크롬 웹스토어
+
+
+
+사용자(client)가
+
+127.0.0.1:5000/send 를 엔터친다
+
+=> @app.route('/send')로 가서 send.html을 응답
+
+=> send.html안에 form 태그로 인해 사용자가 입력한 것이 msg로 들어가서 보내짐
+
+=> 양식이 /receive로 감
+
+=> 사용자가 보낸 요청 중 넘어온 자료들 중 키값이 msg인 것의 value가 name
+
+=> data에 실려서 receive.html에
+
+
+
+
+
+pip install art
+
+
+
+import 파일들 우클-Sort Imports 
+
+
+
+
+
+=================================
+
+index.html
+
