--- a/Algorithm/Book/모두의_알고리즘withPython/1알고리즘기초.md
+++ b/Algorithm/Book/모두의_알고리즘withPython/1알고리즘기초.md
@@ -51,6 +51,8 @@ print(abs_square(-3))
 
 ## 1. 알고리즘 기초
 
+## [1]  1부터 n까지의 합 구하기
+
 ### (1) 알고리즘의 중요 포인트
 
 * 문제
@@ -144,4 +146,105 @@ print(sum_n(100))   # 1부터 100까지의 합(입력: 100, 출력: 5050)
 
 
 ### (5) 입력 크기와 계산 횟수
+
+알고리즘에는 입력이 필요한데 입력 크기가 알고리즘 수행 성능에 영향을 미칠 때가 많다.
+
+* 첫 번째 알고리즘 : 덧셈 n번
+* 두 번째 알고리즘 : 덧셈, 곱셈, 나눗셈 각 한 번(총 세 번)
+
+입력 크기 n이 작을 때는 큰 차이가 없지만 알고리즘 분석에서는 매우 큰 n에 대해서 따져보아야 한다.
+
+
+
+### (6) 대문자 O 표기법: 계산 복잡도 표현
+
+'계산 복잡도(complexity)' : 어떤 알고리즘이 문제를 풀기 위해 해야 하는 계산이 얼마나 복잡한지 나타낸 정도
+
+'빅 오' 표기법 : 대문자 O 표기법은 알고리즘에서 필요한 계산 횟수를 정확한 숫자로 표현하지 않고 입력 크기 n과의 관계로 표현. 알고리즘의 대략적인 성능을 표시하는 방법. 
+
+* 필요한 계산 횟수가 입력 크기에 '비례' : O(n)
+* 입력 크기 n과 필요한 계산의 횟수가 무관 : O(1)
+
+첫 번째 알고리즘은 입력 크기 n에 대해 사칙 연산(덧셈)을 n번 해야 하므로, 이 알고리즘의 계산 복잡도는 O(n). 필요한 계산 횟수가 입력 크기에 '정비례'할 때 O(n)
+
+두 번째 알고리즘은 입력 크기 n과 무관하게 사칙연산을 세 번 하므로 O(1)
+
+```
+알고리즘의 계산 복잡도는 시간 복잡도(time complexity)와 공간 복잡도(space complexity)로 나눌 수 있다.
+시간 복잡도 : 어떤 알고리즘을 수행하는 데 얼마나 오랜 시간이 걸리는지 분석
+공간 복잡도 : 어떤 알고리즘을 수행하는 데 얼마나 많은 공간(메모리/기억 장소)이 필요한지 분석
+
+앞서 사칙연산 횟수로 계산 복잡도를 생각한 것은 '시간 복잡도'에 해당
+어떤 알고리즘을 수행하는 데 필요한 사칙연산의 횟수가 많아지면 결국 알고리즘 전체를 수행하는 시간이 늘어나므로.
+책에 나오는 '계산 복잡도'는 특별한 말 없으면 '시간 복잡도'
+```
+
+
+
+## [2] 최댓값 찾기
+
+### (1) 리스트
+
+주어진 숫자 n개 중 가장 큰 숫자 찾는 알고리즘
+
+* 필요한 파이썬 리스트 기능
+
+```
+리스트(list) : 정보 여러 개를 하나로 묶어 저장하고 관리. 대괄호[] 안에 정보 여러개를 ,로 구분
+숫자 여러개는 파이썬의 리스트 기능을 이용하면 쉽게 관리 가능
+
+* 자료 위치를 1이 아닌 0부터 센다
+* 위치 번호 -1은 리스트의 끝에서 첫 번째 값, 즉 마지막 값
+ex) 자료 n개 든 리스트 b에서 마지막 값은 b[n-1] 또는 b[-1]
+```
+
+* len() 함수 : 리스트 안에 들어 있는 자료 개수(리스트의 길이) len(a), len( [1, 2, 3] )
+
+* append(x) : 자료 x를 리스트의 맨 뒤에 추가 a.append(4)
+
+* insert(i, x) : 리스트의 i번 위치에 x를 추가 a.insert(0, 5)  # 0번 위치(맨 앞)에 5 추가
+
+* pop(i) : i번 위치에 있는 자료를 리스트에서 빼내면서 그 값을 함수의 결괏값으로 돌려줌. i 지정하지 않으면 맨 마지막 값 print(a.pop())
+
+* clear() : 리스트의 모든 자료 지우기
+
+* x in a : 어떤 자료 x가 리스트 a 안에 있는지 확인(x not in a는 반대 결과) True / False
+
+  
+
+### (2) 최댓값을 찾는 알고리즘
+
+17, 92, 18, 33, 58, 7, 33, 42
+
+1. 첫 번째 숫자 17을 최댓값으로 기억(최댓값: 17)
+2. 두 번째 숫자 92를 현재 최댓값 17과 비교. 92는 17보다 크므로 최댓값을 92로 바꿔 기억(최댓값: 92)
+3. 세 번째 숫자 18을 현재 최댓값 92와 비교. 18은 92보다 작으므로 지나간다(최댓값: 92)
+
+4~7. 네 번째 숫자부터 일곱 번째 숫자까지 같은 과정 반복
+
+8. 마지막 숫자 42를 현재 최댓값 92와 비교. 42는 92보다 작으므로 지나간다(최댓값: 92)
+9. 마지막으로 기억된 92가 주어진 숫자 중 최댓값
+
+```python
+# 최댓값 구하기
+# 입력: 숫자가 n개 들어 있는 리스트
+# 출력: 숫자 n개 중 최댓값
+
+def find_max(a):
+    n = len(a)              # 입력 크기 n
+    max_v = a[0]            # 리스트의 첫 번째 값을 최댓값으로 기억
+    for i in range(1, n):   # 1부터 n-1까지 반복
+        if a[i] > max_v:    # 이번 값이 현재까지 기억된 최댓값보다 크면
+            max_v = a[i]    # 최댓값을 변경
+    return max_v
+
+
+v = [17, 92, 18, 33, 58, 7, 33, 42]
+print(find_max(v))
+
+
+'''
+92
+'''
+```
 
