--- a/Algorithm/Book/모두의_알고리즘withPython/1알고리즘기초.md
+++ b/Algorithm/Book/모두의_알고리즘withPython/1알고리즘기초.md
@@ -248,3 +248,155 @@ print(find_max(v))
 '''
 ```
 
+
+
+### (3) 알고리즘 분석
+
+최댓값 구하기 프로그램의 계산 복잡도(시간 복잡도)는, 입력 크기가 n일 때, 즉 숫자 n개 중에서 최댓값을 구할 경우 자료 개수 n은 리스트 a의 크기인 len(a)
+
+최댓값을 구하는데 컴퓨터가 해야 하는 가장 중요한 계산은 두 값 중 어느 것이 더 큰지 판단하는 '비교'
+
+for i in range(1, n): 반복문 안에 크기를 비교하는 판단 구문(if a[i] > max_v:)이 있어 자료 n개 중 최댓값을 찾으려면 비교를 n-1번 해야 함
+
+O(n)
+
+계산 복잡도 O(n)의 가장 중요한 특징은 입력 크기와 계산 시간이 대체로 비례한다는 것.
+
+숫자 10,000개 중 최댓값을 찾는 데 걸리는 시간이 10초면 20,000개를 입력할 때 약 20초 예상
+
+
+
+### (4)  응용하기
+
+리스트에 숫자가 n개 있을 때 가장 큰 값이 있는 위치 번호를 돌려주는 알고리즘
+
+```python
+# 최댓값의 위치 구하기
+# 입력: 숫자가 n개 들어 있는 리스트
+# 출력: 숫자 n개 중에서 최댓값이 있는 위치(0부터 n-1까지의 값)
+
+def find_max_idx(a):
+    n = len(a)  # 입력 크기n
+    max_idx = 0  # 리스트 중 0번 위치를 최댓값 위치로 기억
+    for i in range(1, n):
+        if a[i] > a[max_idx]:  # 이번 값이 현재까지 기억된 최댓값보다 크면
+            max_idx = i  # 최댓값의 위치를 변경
+    return max_idx
+
+v = [17, 92, 18, 33, 58, 7, 33, 42]
+print(find_max_idx(v))
+
+
+'''
+1
+'''
+```
+
+최댓값 또는 최솟값 위치 번호를 알면 값 쉽게 구할 수 있다.
+
+a[최댓값의 위치 번호] = 최댓값
+
+
+
+## [3] 동명이인 찾기1
+
+n명의 사람 이름 중에서 같은 이름을 찾아 집합으로 만들어 돌려주는 알고리즘
+
+### (1) 집합
+
+집합은 리스트와 같이 정보를 여러 개 넣어서 보관할 수 있는 파이썬 기능인데, 리스트와 달리 자료가 중복되어 들어가지 않고, 자료의 순서도 의미가 없다.
+
+빈 집합을 만들려면 set()을 이용하고, 집합에 자료를 추가하려면 add() 함수를 이용
+
+집합 안에 자료가 몇 개 있는지 알려면 len() 함수를 이용
+
+* len(s) : 집합의 길이(자료 개수)를 구함
+* add(x) : 집합에 자료 x를 추가
+* discard(x) : 집합에 자료 x가 들어 있다면 삭제(없으면 변화X)
+* clear() : 집합의 모든 자료를 지움
+* x in s : 어떤 자료 x가 집합 s에 들어 있는지 확인(x not in s는 반대 결과)
+
+### (2) 동명이인을 찾는 알고리즘
+
+name = ["Tom", "Jerry", "Mike", "Tom"]  # 파이썬은 대소문자 구분
+
+1. 첫 번째 Tom을 뒤에 있는 Jerry, Mike, Tom과 차례로 비교
+2. 첫 번째 Tom과 마지막 Tom이 같으므로 동명이인(동명이인: Tom)
+3. 두 번째 Jerry를 뒤에 있는 Mike, Tom과 비교(앞에 있는 Tom과는 이미 비교했음)
+4. 세 번째 Mike를 뒤에 있는 Tom과 비교
+5. 마지막 Tom은 비교하지 않아도 됨(이미 앞에서 비교)
+6. 같은 이름은 Tom 하나뿐
+
+주의할 점
+
+* 이번에 비교할 이름을 뽑은 다음에는 뽑은 이름보다 순서상 뒤에 있는 이름하고만 비교하면 됨
+
+  자기 자신과 비교하는 것은 무의미하고 앞에 있는 이름과는 이미 비교가 끝났기 때문
+
+* 리스트의 마지막 이름을 기준으로는 비교하지 않아도 됨. 자신의 뒤에는 비교할 이름이 없고, 앞과는 이미 비교가 끝나서
+
+* 같은 이름을 찾으면 결과 집합에 그 이름을 추가
+
+```python
+# 두 번 이상 나온 이름 찾기
+# 입력: 이름이 n개 들어 있는 리스트
+# 출력: 이름 n개 중 반복되는 이름의 집합
+
+def find_same_name(a):
+    n = len(a)  # 리스트의 자료 개수를 n에 저장
+    result = set()  # 결과를 저장할 빈 집합
+    for i in range(0, n-1):  # 0부터 n~2까지 반복
+        for j in range(i+1, n):  # i+1부터 n-1까지 반복
+            if a[i] == a[j]:  # 이름이 같으면
+                result.add(a[i])  # 찾은 이름을 result에 추가
+    return result
+
+name = ["Tom", "Jerry", "Mike", "Tom"]  # 대소문자 유의: 파이썬은 대소문자를 구분함
+print(find_same_name(name))
+name2 = ["Tom", "Jerry", "Mike", "Tom", "Mike"]
+print(find_same_name(name2))
+
+
+'''
+{'Tom'}
+{'Mike', 'Tom'}
+'''
+```
+
+집합에서는 어떤 자료가 집합에 들어 있는지가 중요할 뿐 그 자료들의 순서는 중요하지 않다.
+
+위에서 중첩된 반복문을 보면, 리스트 안에 있는 자료를 서로 빠짐없이 비교하되 중복해서 비교하지 않도록 반복문을 두 개 겹쳐서 사용했다.
+
+첫 번째 반복문 for i in range(0, n-1): 은 i를 0부터 n-2까지 반복한다는 뜻이며, 
+
+리스트의 마지막 값에 해당하는 a[n-1]은 이미 앞에서 다른 자료와 한 번씩 다 비교했으므로 제외해도 된다.
+
+두 번째 반복문 for j in range(i+1, n): 은 비교 기준으로 정해진 i번째 위치에 1을 더한 위치의 값부터 끝까지 비교하는 것이다.
+
+### (3) 알고리즘 분석
+
+위 알고리즘의 계산 복잡도는 같은 이름을 찾는 알고리즘이므로 두 이름이 같은지 '비교'하는 횟수를 따져보면 된다.
+
+입력 크기 n에 대하여
+
+0번 위치 이름: n-1번 비교(자기를 제외한 모든 이름과 비교)
+
+1번 위치 이름: n-2번 비교
+
+2번 위치 이름: n-3번 비교
+
+...
+
+n-2번 위치 이름: 1번 비교
+
+n-1번 위치 이름: 0번 비교
+
+전체 비교 횟수는 0 + 1 + 2 + ... + (n-1)번, 즉 1부터 n-1까지의 합
+
+문제 1에서 배운 1부터 n까지의 합을 구하는 공식에 n 대신 n-1을 대입하면 다음과 같다.
+
+1 + 2 + ... + (n-1) = (n-1)(n-1+1)/2 = n(n-1)/2 = 1/2n^-1/2n번 비교해야 한다
+
+O(n제곱)  <- 입력크기 n이 커지면 계산 시간은 그 제곱에 비례하므로 엄청난 차이로 증가
+
+n의 제곱에 비례해서 계산 시간이 변하는 것이 핵심이므로 계수 무시
