--- a/Algorithm/Book/모두의_알고리즘withPython/4자료 구조.md
+++ b/Algorithm/Book/모두의_알고리즘withPython/4자료 구조.md
@@ -297,3 +297,255 @@ print(find_same_name(name2))
 
 프로그램에서 for 반복문이 여러 번 나올 때는 서로 겹치느냐 겹치지 않느냐에 따라 계산 복잡도가 많이 달라짐
 
+```
+계산 복잡도: 시간 복잡도와 공간 복잡도
+계산 복잡도에는 계산을 얼마나 빨리 할 수 있는지 따져 보는 '시간 복잡도'와 계산에 얼마나 많은 저장 공간이 필요한지 따져 보는 '공간 복잡도'가 있다.
+딕셔너리를 이용해 동명이인을 찾는 문제는 모든 사람을 서로 비교하는 방법보다 더 나은 시간 복잡도를 가진다. 하지만 딕셔너리를 만들어 그 안에 모든 이름과 등장 횟수를 저장해야 하므로 더 많은 저장 공간을 사용한다. <= 공간 복잡도를 희생하여 시간 복잡도를 개선한 것
+알고리즘 분석을 정확하게 하려면 시간 복잡도뿐만 아니라 공간 복잡도도 함께 고려해야 한다.
+하지만 현대 컴퓨터는 대체로 저장 공간(메모리, 하드디스크)이 매우 크기 때문에 상대적으로 공간 복잡도에 덜 민감한 편
+```
+
+* 해시 테이블
+
+  파이썬의 딕셔너리와 같이 키(key)와 값(value)을 대응시켜 자료를 보관하는 자료 구조를 컴퓨터 과학 용어로는 '해시 테이블(hash table)'이라고 부름
+
+  해시 테이블은 프로그래밍 언어마다 다른 이름으로 부르기도 한다.
+
+  예를 들어 C++에서는 언오더드맵(unordered_map)이라고 부르고 자바에서는 해시맵(hashmap)
+
+  파이썬/C#에서는 딕셔너리(dictionary, 사전)라는 용어를 사용
+
+  해시 테이블은 키(key)와 값(value)을 대응시켜 여러 개의 자료를 보관하는 효율성이 높은 자료 구조
+
+
+
+## [15] 친구의 친구 찾기
+
+친구 관계를 이용하여 어떤 한 사람이 직접 또는 간접으로 아는 모든 친구를 출력하는 알고리즘
+
+
+
+### (1) 용어 정리
+
+* 친구(일촌): 어떤 두 사람이 직접 아는 사이일 때, 즉 서로 친구 요청을 수락한 경우 친구라고 함
+
+  ex) A가 B의 친구이면 B도 A의 친구
+
+* 모든 친구(친척): 어떤 사람이 직접 아는 친구들과 그 친구들의 친구들, 즉 직간접으로 아는 모든 사람을 말함(자기 자신도 포함)
+
+  ex) A와 B가 친구이고 B와 C가 친구이고 C와 D가 친구이면(A-B-C-D), A에게는 A, B, C, D 전부가 '모든 친구'
+
+* 친밀도(촌수): 어떤 사람 두 명이 서로 직간접으로 아는 사이일 때 두 명이 서로 몇 단계를 거쳐 아는지 나타내는 숫자(자기 자신의 친밀도는 0)
+
+  ex) A와 B가 친구이고 B와 C가 친구이고 C와 D가 친구이면(A-B-C-D), A와 B의 친밀도는 1, A와 C의 친밀도는 2, A와 D의 친밀도는 3
+
+친구 관계를 이용하여 어떤 한 사람의 '모든 친구'를 출력하는 알고리즘 만들기
+
+위 문제를 푸는 데 꼭 필요한 자료구조인 '그래프(graph)'를 알아보자
+
+ 
+
+### (2) 그래프
+
+친구 관계 문제를 푸는 데 필요한 그래프는 꼭짓점들과 그 꼭짓점 사이를 연결한 선의 집합을 의미
+
+꼭짓점(vertex)와 그 꼭짓점 사이를 연결하는 선(edge)
+
+
+
+### (3) 그래프로 친구 관계 표현하기
+
+
+
+### (4) 파이썬으로 그래프 표현하기
+
+파이썬에서 그래프를 자료 구조로 만들어 저장하는 방법에는 여러 가지가 있지만, 여기서는 우리가 이미 알고 있는 리스트와 딕셔너리를 이용해서 그래프를 표현하는 방법으로.
+
+그래프를 표현하려면 각 꼭짓점의 정보부터 저장해야 한다
+
+그래프를 표현할 fr_info 딕셔너리를 만들고 키(key)로 각 꼭짓점을 지정
+
+```python
+fr_info = {
+    'Summer':
+    'John':
+    'Justin':
+    'Mike':
+    'May':
+    'Kim':
+    'Tom':
+    'Jerry':
+}
+```
+
+딕셔너리에는 키와 키에 대응하는 값(value)이 필요 => '선'
+
+각 꼭짓점에 직접 연결된 다른 꼭짓점들의 리스트를 만들어서 fr_info의 키에 대응하는 값으로 적기
+
+```python
+'Summer': ['John', 'Justin', 'Mike']
+```
+
+```python
+fr_info = {
+    'Summer': ['John', 'Justin', 'Mike'],
+    'Jonh': ['Summer', 'Justin'],
+    'Justin': ['John', 'Summer', 'Mike', 'May'],
+    'Mike': ['Summer', 'Justin'],
+    'May': ['Justin', 'Kim'],
+    'Kim': ['May'],
+    'Tom': ['Jerry'],
+    'Jerry': ['Tom']
+}
+```
+
+A가 B의 친구면 B는 자동으로 A의 친구.
+
+따라서 Summer에 대응하는 리스트에 John이 있으면 John에 대응하는 리스트에도 자연히 Summer가 있음
+
+
+
+### (5) 모든 친구 찾기 알고리즘
+
+이 문제를 풀기 위해 메모할 두 가지
+
+1. 앞으로 처리해야 할 사람들 
+
+   꼬리에 꼬리를 무는 친구의 친구들을 한 명도 빠뜨리지 않고 처리하려면 친구의 이름이 나올 때마다 메모지에 적어 두었다가 한 명씩 처리하면서 메모지에서 지워야 함
+
+2. 이미 추가된 사람들
+
+   친구 추적 과정에서 한 명이 여러 번 나오거나 추적이 무한 반복되지 않게 하려면 이미 처리 대상으로 올린 사람은 중복되지 않도록 메모지에 적어 두어야 함
+
+'앞으로 처리해야 할 사람을 넣어 두었다가 하나씩 꺼내기 위한 기억 장소'로 큐(변수 이름: qu) 이용
+
+'이미 처리 대상으로 추가한 사람들을 적어 둘 기억 장소'로 집합(변수 이름: done)을 이용
+
+1. 앞으로 처리할 사람을 저장할 큐(qu)를 만든다
+2. 이미 큐에 추가한 사람을 저장할 집합(done)을 만든다
+3. 검색의 출발점이 될 사람을 큐(qu)와 집합(done)에 추가
+4. 큐에 사람이 남아 있다면 큐에서 처리할 사람을 꺼낸다
+5. 꺼낸 사람을 출력
+6. 꺼낸 사람의 친구들 중 아직 큐(qu)에 추가된 적이 없는 사람을 골라 큐(qu)와 집합(done)에 추가
+7. 큐에 처리할 사람이 남아 있다면 4번 과정부터 다시 반복
+
+```python
+# 친구 리스트에서 자신의 모든 친구를 찾는 알고리즘
+# 입력: 친구 관계 그래프 g, 모든 친구를 찾을 자신 start
+# 출력: 모든 친구의 이름
+
+def print_all_friends(g, start):
+    qu = []  # 기억 장소1: 앞으로 처리해야 할 사람들을 큐에 저장
+    done = set()  # 기억 장소2: 이미 큐에 추가한 사람들을 집합에 기록(중복 방지)
+
+    qu.append(start)  # 자신을 큐에 넣고 시작
+    done.add(start)  # 집합에도 추가
+
+    while qu:  # 큐에 처리할 사람이 남아 있는 동안
+        p = qu.pop(0)  # 큐에서 처리 대상을 한 명 꺼내
+        print(p)  # 이름을 출력하고
+        for x in g[p]:  # 그의 친구들 중에
+            if x not in done:  # 아직 큐에 추가된 적이 없는 사람을
+                qu.append(x)  # 큐에 추가하고
+                done.add(x)  # 집합에도 추가
+
+# 친구 관계 리스트
+# A와 B가 친구이면
+# A의 친구 리스트에도 B가 나오고, B의 친구 리스트에도 A가 나옴
+
+fr_info = {
+    'Summer': ['John', 'Justin', 'Mike'],
+    'John': ['Summer', 'Justin'],
+    'Justin': ['John', 'Summer', 'Mike', 'May'],
+    'Mike': ['Summer', 'Justin'],
+    'May': ['Justin', 'Kim'],
+    'Kim': ['May'],
+    'Tom': ['Jerry'],
+    'Jerry': ['Tom']
+}
+
+print_all_friends(fr_info, 'Summer')
+print()
+print_all_friends(fr_info, 'Jerry')
+```
+
+그래프에서 연결된 모든 꼭짓점을 탐색하는 알고리즘. '그래프 탐색 알고리즘'
+
+
+
+### (6) 친밀도 계산 알고리즘
+
+일반적으로 A라는 사람과 X라는 사람의 친밀도가 n이면 X의 친구 Y는 A와 친밀도가 n+1
+
+이 성질을 이용하여 어떤 사람의 친구들을 큐에 넣을 때 친밀도를 1씩 증가시키면 됨
+
+```python
+# 친구 리스트에서 자신의 모든 친구를 찾고 친구들의 친밀도를 계산하는 알고리즘
+# 입력: 친구 관계 그래프 g, 모든 친구를 찾을 자신 start
+# 출력: 모든 친구의 이름과 자신과의 친밀도
+
+def print_all_friends(g, start):
+    qu = []         # 기억 장소1: 앞으로 처리해야 할 (사람 이름, 친밀도) 튜플을 큐에 저장
+    done = set()    # 기억 장소2: 이미 큐에 추가한 사람을 집합에 기록(중복 방지)
+
+
+    qu.append((start, 0))   # (사람 이름, 친밀도) 정보를 하나의 튜플로 묶어 처리
+                            # 자기 자신의 친밀도: 0
+    done.add(start)         # 집합에도 추가
+
+    while qu:               # 큐에 처리할 사람이 남아 있는 동안
+        (p, d) = qu.pop(0)  # 큐에서 (사람 이름, 친밀도) 정보를 p와 d로 각각 꺼냄
+        print(p, d)         # 사람 이름과 친밀도를 출력
+        for x in g[p]:      # 친구들 중에
+            if x not in done:           # 아직 큐에 추가된 적이 없는 사람을
+                qu.append((x, d + 1))   # 친밀도를 1 증가시켜 큐에 추가하고
+                done.add(x)             # 집합에도 추가
+
+# 친구 관계 리스트
+# A와 B가 친구이면
+# A의 친구 리스트에도 B가 나오고, B의 친구 리스트에도 A가 나옴
+
+fr_info = {
+    'Summer': ['John', 'Justin', 'Mike'],
+    'John': ['Summer', 'Justin'],
+    'Justin': ['John', 'Summer', 'Mike', 'May'],
+    'Mike': ['Summer', 'Justin'],
+    'May': ['Justin', 'Kim'],
+    'Kim': ['May'],
+    'Tom': ['Jerry'],
+    'Jerry': ['Tom']
+}
+
+print_all_friends(fr_info, 'Summer')
+print()
+print_all_friends(fr_info, 'Jerry')
+```
+
+* 파이썬의 튜플
+
+  프로그램에서는 처리해야 할 사람 이름과 친밀도를 같이 묶어서 큐에 보관하기 위해 파이썬의 튜플(tuple) 기능을 활용.
+
+  튜플은 여러 개의 정보를 묶어서 하나의 정보처럼 사용하기 위한 기능.
+
+  수학에서 x 좌표와 y 좌표를 묶어서 순서쌍 (x, y)로 표현하는 것과 비슷한 개념
+
+  튜플로 묶어서 보관하고자 하는 정보가 있다면 소괄호 안에 쉼표(,)를 찍어 나열하면 됨
+
+  ```python
+  t = (3, 7)  # 3과 7을 하나로 묶어 튜플 1에 저장
+  t
+  # (3, 7)
+  t[0]  # 튜플 t의 첫 번째 정보 값
+  # 3
+  t[1]  # 튜플 t의 두 번째 정보 값
+  # 7
+  (x, y) = t  # 튜플 t 안의 값들을 변수 x와 y에 각각 저장
+  x
+  # 3
+  y
+  # 7
+  ```
+
+  qu.append((start, 0))에서 소괄호가 두 번 사용된 이유는 append() 함수의 인자로 start와 0을 묶어 만든 튜플(start, 0)을 전달했기 때문
+
+  또한 (p, d) = qu.pop(0)은 이렇게 저장된 튜플을 꺼내서 사람 이름과 친밀도 정보를 각각 p와 d에 나누어서 저장한다
