--- a/Algorithm/lecture/SWtestA/1기초/2 브루트 포스.md
+++ b/Algorithm/lecture/SWtestA/1기초/2 브루트 포스.md
@@ -25,6 +25,8 @@
 
 
 
+## 그냥 다 해보기
+
 ### 2309번 일곱 난쟁이
 
 * 아홉 명의 난쟁이 중 일곱 명의 난쟁이를 찾는 문제
@@ -334,9 +336,47 @@ n = 4
 
 최대 10개. 3개의 수이므로 3의 10승
 
+```python
+t = int(input())
+for _ in range(t):
+    ans = 0
+    n = int(input())
+    for l1 in range(1, 4):
+        if l1 == n:
+            ans += 1
+        for l2 in range(1, 4):
+            if l1+l2 == n:
+                ans += 1
+            for l3 in range(1, 4):
+                if l1+l2+l3 == n:
+                    ans += 1
+                for l4 in range(1, 4):
+                    if l1+l2+l3+l4 == n:
+                        ans += 1
+                    for l5 in range(1, 4):
+                        if l1+l2+l3+l4+l5 == n:
+                            ans += 1
+                        for l6 in range(1, 4):
+                            if l1+l2+l3+l4+l5+l6 == n:
+                                ans += 1
+                            for l7 in range(1, 4):
+                                if l1+l2+l3+l4+l5+l6+l7 == n:
+                                    ans += 1
+                                for l8 in range(1, 4):
+                                    if l1+l2+l3+l4+l5+l6+l7+l8 == n:
+                                        ans += 1
+                                    for l9 in range(1, 4):
+                                        if l1+l2+l3+l4+l5+l6+l7+l8+l9 == n:
+                                            ans += 1
+                                        for l0 in range(1, 4):
+                                            if l1+l2+l3+l4+l5+l6+l7+l8+l9+l0 == n:
+                                                ans += 1
+    print(ans)
+```
 
 
 
+## 순열 사용하기
 
 ## 순열 Permutation
 
@@ -419,6 +459,39 @@ bool next_permutation(int *a, int n) {  // 크기가 n인 배열 a
 }
 ```
 
+### 10972번 다음 순열
+
+```python
+def next_permutation(a):
+    i = len(a)-1
+    while i > 0 and a[i-1] >= a[i]:
+        i -= 1
+    if i <= 0:
+        return False
+    j = len(a)-1
+    while a[j] <= a[i-1]:
+        j -= 1
+
+    a[i-1],a[j] = a[j],a[i-1]
+
+    j = len(a)-1
+    while i < j:
+        a[i],a[j] = a[j],a[i]
+        i += 1
+        j -= 1
+
+    return True
+
+n = int(input())
+a = list(map(int,input().split()))
+if next_permutation(a):
+    print(' '.join(map(str,a)))
+else:
+    print(-1)
+```
+
+
+
 
 
 ### 이전 순열 Next Permutation(10973)
@@ -440,6 +513,39 @@ bool next_permutation(int *a, int n) {  // 크기가 n인 배열 a
     return true;
 }
 ```
+
+### 10973번 이전 순열
+
+```python
+def prev_permutation(a):
+    i = len(a)-1
+    while i > 0 and a[i-1] <= a[i]:
+        i -= 1
+    if i <= 0:
+        return False
+    j = len(a)-1
+    while a[j] >= a[i-1]:
+        j -= 1
+
+    a[i-1],a[j] = a[j],a[i-1]
+
+    j = len(a)-1
+    while i < j:
+        a[i],a[j] = a[j],a[i]
+        i += 1
+        j -= 1
+
+    return True
+
+n = int(input())
+a = list(map(int,input().split()))
+if prev_permutation(a):
+    print(' '.join(map(str,a)))
+else:
+    print(-1)
+```
+
+
 
 
 
@@ -467,6 +573,39 @@ int main() {
 }
 ```
 
+### 10974번 모든 순열
+
+```python
+def next_permutation(a):
+    i = len(a)-1
+    while i > 0 and a[i-1] >= a[i]:
+        i -= 1
+    if i <= 0:
+        return False
+    j = len(a)-1
+    while a[j] <= a[i-1]:
+        j -= 1
+
+    a[i-1],a[j] = a[j],a[i-1]
+
+    j = len(a)-1
+    while i < j:
+        a[i],a[j] = a[j],a[i]
+        i += 1
+        j -= 1
+
+    return True
+
+n = int(input())
+a = list(range(1,n+1))
+while True:
+    print(' '.join(map(str,a)))
+    if not next_permutation(a):
+        break
+```
+
+
+
 
 
 ### 팩토리얼
@@ -477,7 +616,7 @@ int main() {
 
 
 
-#### 10819번 차이를 최대로
+### 10819번 차이를 최대로
 
 수 N개가 주어졌을 때(3<=N<=8)
 
@@ -492,9 +631,48 @@ do {
 } while(next_permutation(a.begin(), a.end()));
 ```
 
+```python
+def next_permutation(a):
+    i = len(a)-1
+    while i > 0 and a[i-1] >= a[i]:
+        i -= 1
+    if i <= 0:
+        return False
+    j = len(a)-1
+    while a[j] <= a[i-1]:
+        j -= 1
+
+    a[i-1],a[j] = a[j],a[i-1]
+
+    j = len(a)-1
+    while i < j:
+        a[i],a[j] = a[j],a[i]
+        i += 1
+        j -= 1
+
+    return True
+def calc(a):
+    ans = 0
+    for i in range(1, len(a)):
+        ans += abs(a[i]-a[i-1])
+    return ans
+n = int(input())
+a = list(map(int,input().split()))
+a.sort()
+ans = 0
+while True:
+    temp = calc(a)
+    ans = max(ans, temp)
+    if not next_permutation(a):
+        break
+print(ans)
+```
 
 
-#### 10971번 외판원 순회2
+
+
+
+### 10971번 외판원 순회2
 
 Travelling Salesman Problem(TSP)
 
@@ -542,11 +720,59 @@ do {
 } while (next_permutation(d.begin()+1, d.end()));
 ```
 
+```python
+def next_permutation(a):
+    i = len(a)-1
+    while i > 0 and a[i-1] >= a[i]:
+        i -= 1
+    if i <= 0:
+        return False
+    j = len(a)-1
+    while a[j] <= a[i-1]:
+        j -= 1
+
+    a[i-1],a[j] = a[j],a[i-1]
+
+    j = len(a)-1
+    while i < j:
+        a[i],a[j] = a[j],a[i]
+        i += 1
+        j -= 1
+
+    return True
+
+n = int(input())
+w = [list(map(int,input().split())) for _ in range(n)]
+d = list(range(n))
+ans = 2147483647
+while True:
+    ok = True
+    s = 0
+    for i in range(0, n-1):
+        if w[d[i]][d[i+1]] == 0:
+            ok = False
+            break
+        else:
+            s += w[d[i]][d[i+1]]
+    if ok and w[d[-1]][d[0]] != 0:
+        s += w[d[-1]][d[0]]
+        ans = min(ans, s)
+    if not next_permutation(d):
+        break
+    if d[0] != 0:
+        break
+print(ans)
+```
 
 
-#### 6603번 로또
+
+
+
+### 6603번 로또
 
 입력으로 주어진 K개의 수 중 6개의 수 고르기
+
+* 0을 K-6개, 1을 6개를 넣은 다음에 next_permutation 수행하면 모든 조합 구할 수 있다
 
 ```c++
 #include <iostream>
@@ -584,9 +810,47 @@ int main() {
 }
 ```
 
+```python
+def next_permutation(a):
+    i = len(a)-1
+    while i > 0 and a[i-1] >= a[i]:
+        i -= 1
+    if i <= 0:
+        return False
+    j = len(a)-1
+    while a[j] <= a[i-1]:
+        j -= 1
+
+    a[i-1],a[j] = a[j],a[i-1]
+
+    j = len(a)-1
+    while i < j:
+        a[i],a[j] = a[j],a[i]
+        i += 1
+        j -= 1
+
+    return True
+
+while True:
+    n, *a = list(map(int,input().split()))
+    if n == 0:
+        break
+    d = [0]*(n-6)+[1]*6
+    ans = []
+    while True:
+        cur = [a[i] for i in range(n) if d[i] == 1]
+        ans.append(cur)
+        if not next_permutation(d):
+            break
+    ans.sort()
+    for v in ans:
+        print(' '.join(map(str,v)))
+    print()
+```
 
 
-#### 14888번 연산자 끼워넣기
+
+### 14888번 연산자 끼워넣기
 
 N개의 수로 이루어진 수열과 N-1개의 연산자가 있다.(2<=N<=11)
 
@@ -659,9 +923,13 @@ print(ans[0])
 
 
 
+## 재귀 함수 사용하기
+
 ## 재귀 함수 Recursion
 
 재귀 함수를 잘 설계햐아 한다
+
+* 서로 다른 방법을 구분할 수 있게 만드는 애들을 함수의 파라미터로 넣어줌 
 
 
 
@@ -886,6 +1154,149 @@ def go(day, s):
     go(day+t[day], s+p[day])
 
 go(1, 0)
+print(ans)
+```
+
+
+
+### 14888번 연산자 끼워넣기
+
+```python
+def calc(a, index, cur, plus, minus, mul, div):
+    if index == len(a):
+        return (cur, cur)
+    res = []
+    if plus > 0:
+        res.append(calc(a,index+1,cur+a[index],plus-1,minus,mul,div))
+    if minus > 0:
+        res.append(calc(a,index+1,cur-a[index],plus,minus-1,mul,div))
+    if mul > 0:
+        res.append(calc(a,index+1,cur*a[index],plus,minus,mul-1,div))
+    if div > 0:
+        if cur >= 0:
+            res.append(calc(a,index+1,cur//a[index],plus,minus,mul,div-1))
+        else:
+            res.append(calc(a,index+1,-(-cur//a[index]),plus,minus,mul,div-1))
+    ans = (
+        max([t[0] for t in res]),
+        min([t[1] for t in res])
+    )
+
+    return ans
+
+n = int(input())
+a = list(map(int,input().split()))
+plus,minus,mul,div = map(int,input().split())
+ans = calc(a, 1, a[0], plus, minus, mul, div)
+print(ans[0])
+print(ans[1])
+```
+
+
+
+### 15658번 연산자 끼워넣기(2)
+
+```python
+def calc(a, index, cur, plus, minus, mul, div):
+    if index == len(a):
+        return (cur, cur)
+    res = []
+    if plus > 0:
+        res.append(calc(a,index+1,cur+a[index],plus-1,minus,mul,div))
+    if minus > 0:
+        res.append(calc(a,index+1,cur-a[index],plus,minus-1,mul,div))
+    if mul > 0:
+        res.append(calc(a,index+1,cur*a[index],plus,minus,mul-1,div))
+    if div > 0:
+        if cur >= 0:
+            res.append(calc(a,index+1,cur//a[index],plus,minus,mul,div-1))
+        else:
+            res.append(calc(a,index+1,-(-cur//a[index]),plus,minus,mul,div-1))
+    ans = (
+        max([t[0] for t in res]),
+        min([t[1] for t in res])
+    )
+
+    return ans
+
+n = int(input())
+a = list(map(int,input().split()))
+plus,minus,mul,div = map(int,input().split())
+ans = calc(a, 1, a[0], plus, minus, mul, div)
+print(ans[0])
+print(ans[1])
+```
+
+
+
+# 비트마스크 사용하기
+
+## 비트마스크 Bitmask
+
+* 비트(bit) 연산을 사용해서 부분 집합을 표현할 수 있다
+* & (and)
+* | (or)
+* ~ (not)  <-자료형에 따라 결과가 달라짐
+* ^ (xor)
+* 전체 집합
+  * (1 << N) - 1
+* 공집합
+  * 0
+
+
+
+## 비트 연산 Bitwise operation
+
+* shift left (<<)
+* shift right (>>)
+* A << B (A를 왼쪽으로 B비트만큼 민다)
+* 2의 N승 == (1<<N)
+* 정수로 집합을 나타낼 수 있다.
+* {1, 3, 4, 5, 9} = 570 = 2의 1승 + 2의 3승 + ... + 2의 9승  보통 0부터 N-1까지 정수로 이루어진 집합을 나타낼 때 사용
+
+
+
+### 11723번 집합
+
+```python
+import sys
+n = 20
+m = int(sys.stdin.readline())
+s = 0
+for _ in range(m):
+    op, *num = sys.stdin.readline().split()
+    if len(num) > 0:
+        x = int(num[0])-1
+    if op == 'add':
+        s = (s | (1 << x))
+    elif op == 'remove':
+        s = (s & ~(1 << x))
+    elif op == 'check':
+        res = (s & (1 << x))
+        if res > 0:
+            sys.stdout.write('1\n')
+        else:
+            sys.stdout.write('0\n')
+    elif op == 'toggle':
+        s = (s ^ (1 << x))
+    elif op == 'all':
+        s = (1 << n) - 1
+    else:
+        s = 0
+```
+
+
+
+### 1182번 부분집합의 합
+
+```python
+n,m = map(int,input().split())
+a = list(map(int,input().split()))
+ans = 0
+for i in range(1, (1<<n)):
+    s = sum(a[k] for k in range(n) if (i & (1<<k)) > 0)
+    if m == s:
+        ans += 1
 print(ans)
 ```
 
