--- a/Algorithm/lecture/SWtestA/1기초/1 수학.md
+++ b/Algorithm/lecture/SWtestA/1기초/1 수학.md
@@ -6,7 +6,7 @@
 
 
 
-### 나머지 연산 (10430)
+## 나머지 연산 (10430)
 
 정답을 x로 나눈 나머지를 출력하라
 
@@ -20,11 +20,29 @@
 
 나누기는 성립하지 않는다.(Modular Inverse를 구해야 함)
 
-나머지 연산 - 음수의 경우 결과의 부호가 프로그래밍 언어마다 다르다.
+(6/3)%3 = 2%3 = 2
+
+(6%3/3%3)%3 = (0/0)%3
+
+나머지 연산 - 음수의 경우 결과의 부호가 프로그래밍 언어마다 다르다. 파이썬은 0보다 큰 수가 나오긴 함.
+
+cf) 페르마의 소정리. a와 b는 서로소 / c는 소수
+
+### 10430번 나머지
+
+```python
+a,b,c = map(int,input().split())
+print((a%c+b%c)%c)
+print((a%c+b%c)%c)
+print((a%c*b%c)%c)
+print((a%c*b%c)%c)
+```
 
 
 
-### 최대공약수 GCD(Greatest Common Divisor) (2609)
+
+
+## 최대공약수 GCD(Greatest Common Divisor) (2609)
 
 정답이 분수 형태일 때 기약분수로 출력할 때
 
@@ -87,9 +105,23 @@ GCD(a, b, c) = GCD(GCD(a, b), c)
 
 네 수, N개의 숫자도 위와 같은 식으로 계속해서 구할 수 있다
 
+### 2609번 최대공약수와 최소공배수
+
+```python
+def gcd(x, y):
+    if y == 0:
+        return x
+    else:
+        return gcd(y, x%y)
+a,b = map(int, input().split())
+g = gcd(a, b)
+print(g)
+print(a*b//g)
+```
 
 
-### 최소공배수 LCM(Least Common Multiple)(1934)
+
+## 최소공배수 LCM(Least Common Multiple)(1934)
 
 두 수의 최소공배수는 두 수의 공통된 배수 중 가장 작은 정수
 
@@ -101,7 +133,7 @@ GCD 응용해서 구현
 
 
 
-### 소수 Prime Number(1978)
+## 소수 Prime Number(1978)
 
 약수가 1과 자기 자신 밖에 없는 수
 
@@ -182,9 +214,33 @@ i <= N*N과 같다
 
 소수 찾기 - 어떤수 N이 소수 => O(루트N) / 1~N 소수 => O(N루트N)
 
+### 1978번 소수찾기
+
+```python
+def is_prime(x):
+    if x < 2:
+        return False
+    i = 2
+    while i*i <= x:
+        if x % i == 0:
+            return False
+        i += 1
+    return True
+
+n = int(input())
+a = list(map(int,input().split()))
+ans = 0
+for x in a:
+    if is_prime(x):
+        ans += 1
+print(ans)
+```
 
 
-### 에라토스테네스의 체 Sieve of Eratosthenes(1929)
+
+
+
+## 에라토스테네스의 체 Sieve of Eratosthenes(1929)
 
 1부터 N까지 범위 안에 들어가는 모든 소수를 구하려면 에라토스테네스의 체를 사용
 
@@ -211,9 +267,30 @@ for (int i=2; i<=n; i++) {
 
 Prime Harmonic Series
 
+### 1929번 소수 구하기
+
+```python
+MAX = 1000000
+check = [0]*(MAX+1)
+check[0] = check[1] = True
+
+for i in range(2, MAX+1):
+    if not check[i]:
+        j = i+i
+        while j <= MAX:
+            check[j] = True
+            j += i
+m, n = map(int,input().split())
+for i in range(m, n+1):
+    if check[i] == False:
+        print(i)
+```
 
 
-### 골드바흐의 추측 Goldbach's conjecture(6588)
+
+
+
+## 골드바흐의 추측 Goldbach's conjecture(6588)
 
 2보다 큰 모든 짝수는 두 소수의 합으로 표현 가능
 
@@ -222,3 +299,29 @@ Prime Harmonic Series
 5보다 큰 모든 홀수는 세 소수의 합으로 표현 가능
 
 10의 18승 이하에서는 참인 것이 증명됨
+
+### 6588번 골드바흐의 추측
+
+```python
+MAX = 1000000
+check = [0]*(MAX+1)
+check[0] = check[1] = True
+prime = []
+for i in range(2, MAX+1):
+    if not check[i]:
+        prime.append(i)
+        j = i+i
+        while j <= MAX:
+            check[j] = True
+            j += i
+prime = prime[1:]
+while True:
+    n = int(input())
+    if n == 0:
+        break
+    for p in prime:
+        if check[n-p] == False:
+            print("{0} = {1} + {2}".format(n, p, n-p))
+            break
+```
+
