--- a/Algorithm/Book/모두의_알고리즘withPython/3탐색과 정렬.md
+++ b/Algorithm/Book/모두의_알고리즘withPython/3탐색과 정렬.md
@@ -325,7 +325,7 @@ def merge_sort(a):
     n = len(a)
     # 종료 조건: 정렬할 리스트의 자료 개수가 한 개 이하이면 정렬할 필요가 없음
     if n <= 1:
-        return
+        return a
     # 그룹을 나누어 각각 병합 정렬을 호출하는 과정
     mid = n // 2  # 중간을 기준으로 두 그룹으로 나눔
     g1 = a[:mid]
@@ -354,6 +354,7 @@ def merge_sort(a):
         a[ia] = g2[i2]
         i2 += 1
         ia += 1
+    return a
 
 d = [6, 8, 3, 9, 10, 1, 2, 4, 7, 5]
 merge_sort(d)
