--- a/Algorithm/lecture/AlgorithmStudy/L2.md
+++ b/Algorithm/lecture/AlgorithmStudy/L2.md
@@ -4,6 +4,123 @@
 
 ### 다중 반복문에 대한 이해
 
+[예제] 사각형 출력
+
+*을 5개 출력한다. 한 줄을 띄운다. X 5
+
+*을 5개 출력한다. 한 줄을 띄운다.
+
+*을 5개 출력한다. 한 줄을 띄운다.
+
+*을 5개 출력한다. 한 줄을 띄운다.
+
+*을 5개 출력한다. 한 줄을 띄운다.
+
+
+
+다중 반복문
+
+아래를 5번 반복한다. for(i=0; i<n; i++)
+
+{
+
+​	*을 5개 출력한다. 한 줄을 띄운다.
+
+​	for (j=0; j<n; j++)
+
+​		printf("*");
+
+​	printf("\n");
+
+}
+
+```c
+#include <stdio.h>
+
+int main() {
+
+  for (int i=0; i<5; i++) {
+    for (int j=0; j<5; j++) {
+      printf("*");  // 별 n개
+    }
+    printf("\n");  // 한 줄 띄기
+  }
+
+  return 0;
+}
+```
+
+삼각형 출력1
+
+```c
+#include <stdio.h>
+
+int main() {
+  int n;
+  scanf("%d", &n);
+  
+  for (int i=0; i<n; i++) {
+    for (int j=0; j<i+1; j++) {
+      printf("*");
+    }
+    printf("\n");
+  }
+  
+  return 0;
+}
+```
+
+삼각형 출력2
+
+```c
+#include <stdio.h>
+
+int main() {
+
+  int n;
+  scanf("%d", &n);
+  
+  for (int i=1; i<n+1; i++) {
+    for (int k=n-i; k>0; k--) {
+        printf(" ");
+      }
+    for (int j=i; j>0; j--) {
+      printf("*");
+    }
+    printf("\n");
+  }
+  
+  return 0;
+}
+```
+
+삼각형 출력3
+
+```c
+#include <stdio.h>
+
+int main() {
+  
+  int n;
+  scanf("%d", &n);
+  
+  for (int i=0; i<n; i++) {
+    for (int j=1; j<n-i; j++) {
+      printf(" ");
+    }
+    for (int j=0; j<2*i+1; j++) {
+      printf("*");
+    }
+    for (int j=1; j<n-i; j++) {
+      printf(" ");
+    }
+    printf("\n");
+  }
+
+  return 0;
+}
+```
+
 
 
 # 2. 배열(array)
