--- a/Algorithm/lecture/AlgorithmStudy/L2.md
+++ b/Algorithm/lecture/AlgorithmStudy/L2.md
@@ -121,6 +121,256 @@ int main() {
 }
 ```
 
+소수 판별2
+
+```c
+#include <stdio.h>
+
+int main() {
+
+  int n, m;
+  scanf("%d %d", &n, &m);
+
+  for (int i=n; i<=m; i++) {
+    int check = 1;
+    for (int j=2; j<=i-1; j++) {
+      if (i%j == 0) {
+        check = 0;
+        break;
+      }
+    }
+    if (i!=1 && check==1) {
+      printf("%d ", i);
+    }
+  }
+
+  return 0;
+}
+```
+
 
 
 # 2. 배열(array)
+
+### 배열의 개념
+
+* 변수 여러개를 한 번에 선언할 수 있는 방법
+
+```c
+// 1차원 배열
+int array[10];  // 배열. 이름이 array인 배열이 생기고 원소 10개 들어감
+int a,b,c,d,e,f,g,h,i,j;  // 비효율적인 방법
+
+array[0] = 1;  // array 1번째 방에 1을 넣음
+array[9] = 3;  // array 10번째 방에 3을 넣음
+```
+
+
+
+### 2차원 배열의 개념
+
+```c
+// 사각형 형태의 배열. 2차원 배열.
+int array[5][5];  // 첫번째 5는 세로로 5줄. 두번째 5는 가로로 5줄. 5by5 배열.
+array[1][3] = 7;
+```
+
+
+
+### 배열 예제 1 : 3개의 숫자의 합 출력
+
+* 3개의 숫자를 입력받아 그 합을 출력(단, 배열을 이용)
+* 입력의 예 : 4 7 3  // 출력의 예 : 14
+
+```c
+#include <stdio.h>
+
+int main() {
+  int array[3];  // 방 3개짜리 배열 만들기
+  int sum = 0;
+  
+  scanf("%d %d %d", &array[0], &array[1], &array[2]);  // 1번째 방, 2번째 방, 3번째 방
+  
+  sum = array[0] + array[1] + array[2];
+  
+  printf("%d\n", sum);
+  printf("%d", array[0] + array[1] + array[2]);
+  
+  return 0;
+}
+```
+
+
+
+### 배열에 값을 입력하고 출력하기
+
+* 정수들을 입력받아 이를 그대로 출력하라
+
+* 입력의 예 
+
+  ```
+  5
+  1 2 3 4 5
+  ```
+
+* 출력의 예
+
+  ```
+  1 2 3 4 5
+  ```
+
+```c
+#include <stdio.h>
+
+int main() {
+  // 5
+  // 1 2 4 3 5
+  
+  // data[0] <- 1
+  // data[1] <- 2
+  // data[2] <- 4
+  // data[3] <- 3
+  // data[4] <- 5
+  
+  int n;
+  int data[100];
+  
+  scanf("%d", &n);
+  
+  for(int i=0; i<n; i++) {
+    scanf("%d", &data[i]);
+  }
+  // data[0]에다가 입력을 받게 됨
+  // data[1]에다가 입력을 받게 됨
+  // data[2]에다가 입력을 받게 됨
+  
+  for(int i=0; i<n; i++) {
+    printf("%d ", data[i]);
+  }
+  
+  return 0;
+}
+```
+
+
+
+### 최댓값 구하기
+
+* 정수들을 입력받아 최댓값을 출력하라
+
+  ```c
+  // 입력의 예
+  5
+  2 8 5 3 2
+  // 출력의 예
+  8
+  ```
+
+```c
+// 반복문, if문, 배열 사용
+#include <stdio.h>
+
+int main() {
+
+  // 1 8 5 9 10 3
+  // myMax = 1 (배열이 맨 앞)
+  // myMax = 10 (숫자 하나하나 myMax값과 비교하면서 더 큰 값 나오면 그 값을 myMax에 할당)
+  
+  int n;
+  int data[100];
+  
+  scanf("%d", &n);
+  
+  for(int i=0; i<n; i++) {
+    scanf("%d", &data[i]);
+  }
+  
+  int myMax = data[0];  // 배열의 첫번째 값
+  
+  for(int i=1; i<n; i++) {  // 0번째 숫자는 이미 myMax에 넣었으니 처리가 된 것임
+    // data[i]의 값과 myMax값을 비교
+    if(data[i] > myMax) {
+      myMax = data[i];
+    }
+  }
+  
+  printf("%d\n", myMax);
+
+  return 0;
+}
+```
+
+
+
+### 배열 요약
+
+출력 - 변수와 자료형 - 입력 - ''배열'' - 조건문 - 반복문 - 함수
+
+
+
+역으로 출력하기
+
+```c
+
+```
+
+최댓값
+
+```c
+
+```
+
+두 번째 최솟값 찾기
+
+```c
+
+```
+
+점수 계산
+
+```c
+
+```
+
+card game
+
+```c
+
+```
+
+주사위 게임
+
+```c
+
+```
+
+binary
+
+```c
+
+```
+
+숫자피라미드
+
+```c
+
+```
+
+array1
+
+```c
+
+```
+
+array2
+
+```c
+
+```
+
+array3
+
+```c
+
+```
+
