--- a/Algorithm/lecture/AlgorithmStudy/L6.md
+++ b/Algorithm/lecture/AlgorithmStudy/L6.md
@@ -4,17 +4,88 @@
 
 ### 문자형 변수
 
+* 하나의 문자를 담는다.
+
+| 자료형 | 출력형식 |
+| ------ | -------- |
+| 정수   | %d       |
+| 실수   | %lf      |
+| 문자   | %c       |
+
 
 
 ### 아스키 코드
 
+컴퓨터는 문자를 모른다
 
+* 컴퓨터는 사실 문자를 숫자로 알고있다 ( 아스키 코드 )
+
+```c
+char x;
+x = 'a';  // x에는 사실 소문자 a가 아닌 숫자 97이 들어감
+printf("%c\n",x);
+```
+
+* 하나의 문자는 하나의 아스키코드를 가지고있다.
 
 ### 예제 1 : 문자 출력하기
+
+* 다음과 같이 변수를 이용하여 하나의 문자를 출력하시오
+
+```
+입력의 예 
+(없음)
+출력의 예 
+a
+```
+
+```c
+#include <stdio.h>
+
+int main() {
+  char x, y;
+  x = 'a';  // ''문자  ''없으면 변수
+  y = '9';
+  
+  printf("%c %c\n", x, y);
+  
+  return 0;
+}
+```
 
 
 
 ### 예제 2 : 아스키코드 출력하기
+
+[예제] 아스키 코드 알아내기
+
+* 다음과 같이 문자 'a'의 아스키코드 값을 출력하시오
+
+```
+입력의 예
+(없음)
+출력의 예
+97
+```
+
+```c
+// 문자형 변수 char형 변수는 문자를 숫자로 저장.
+#include <stdio.h>
+
+int main() {
+  char x = 'a';  // x는 이미 숫자로 가지고 있음
+  char y = '0';  // y에 문자 0이 들어가는데, 문자가 숫자로 바뀌어서 아스키코드값이 저장됨
+  char z = 97;  // char형 변수(원래 숫자를 담음)z에 숫자 97을 넣음
+    // '48' 이런거 못 담음
+
+  printf("%d\n", x);
+  printf("%c\n", x);  // 숫자 97에 해당하는 문자를 출력
+  printf("%d\n", y);  // 문자 0에 해당하는 아스키코드값 출력
+  printf("%c\n", z);  // 숫자 97에 해당하는 문자가 출력. 소문자 a
+  
+  return 0;
+}
+```
 
 
 
@@ -30,25 +101,167 @@
 
 ### gets 함수의 Compile Error
 
+```c
+현재 시스템이 지원하는 C++ 버전 문제로
+gets 함수를 사용할 시 Compile Error가 뜨게 됩니다.
+이점 유의 하시어 gets 함수를 대체할 수 있는 fgets 함수의 사용을 권장합니다.
+ 
+
+fgets의 간략한 사용법은 다음과 같습니다.
+ 
+
+fgets ( str, num, stream );
+ex. fgets (str, 1000, stdin);
+ 
+
+str
+읽어들인 문자열을 저장할 char 배열을 가리키는 포인터입니다.
+ 
+
+num
+마지막 NULL 문자를 포함하여, 읽어들일 최대 문자 수.
+다시 말해 이 값이 15 이면 최대 14 문자를 입력 받는다.
+ 
+
+stream
+표준 입력(stdin) 에서 입력을 받으려면 여기에 stdin 을 써주면 된다.
+```
+
 
 
 ### 문자열 소개
+
+문자열 (string)
+
+* 문자만으로 이루어진 배열
 
 
 
 ### 문자열 예제
 
+```c
+// 문자열
+
+#include <stdio.h>
+
+int main() {
+  char myString[10];
+  
+  myString[0] = 'h';
+  myString[1] = 'e';
+  myString[2] = 'l';
+  myString[3] = 'l';
+  myString[4] = 'o';
+  myString[5] = '\0';  // 널문자. 명시적으로 넣어줘서 문자열 끝 알려줘야함.
+  
+  printf("%s\n", myString);
+  
+  return 0;
+}
+```
+
+```c
+// 문자열
+
+#include <stdio.h>
+
+int main() {
+  char myString[10];
+  char myString2[] = "hello";
+  
+  myString[0] = 'h';
+  myString[1] = 'e';
+  myString[2] = 'l';
+  myString[3] = 'l';
+  myString[4] = 'o';
+  myString[5] = '\0';  // 널문자. 명시적으로 넣어줘서 문자열 끝 알려줘야함.
+  
+  printf("%s\n", myString);
+  printf("%s\n", myString2);
+  
+  return 0;
+}
+```
+
 
 
 ### 문자열 함수
+
+문자열과 관련된 함수
+
+* strlen(X)   <- X, A, B는 문자열 변수
+* stcmp(A, B)
+* strcpy(A, B)
+
+```c
+strlen(X) : X의 길이를 반환. X="hello" 5를 반환   length
+stcmp(A, B) : A와 B가 같은지 판단   compare
+strcpy(A, B) : B를 A에 복사 A="hello" B="star"  ->  A="star"   copy
+```
 
 
 
 ### strlen
 
+strlen(x)
+
+* 문자열 X의 길이를 반환
+
+```c
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+  char A[] = "hello";
+  
+  int len = strlen(A);
+  
+  printf("%d\n", len);
+  
+  return 0;
+}
+```
+
+strlen의 구현
+
+* '\0'을 찾는다
+
 
 
 ### strlen의 구현
+
+```c
+//strlen
+
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+  char myString[100];
+  
+  scanf("%s", myString);  // string 문자열을 입력 받을 땐 & 빼고. 띄어쓰기 이전까지 입력 받음
+                          // gets(myString) 한줄 전체 입력 받을 수 있음
+  
+  int cnt = 0;
+  int index = 0;
+  
+  while(1) {
+    if(myString[index] == '\0') {
+      break;
+    }
+    else {
+      cnt++;  // 지금까지 조회한 문자의 갯수
+    }
+    
+    index++;
+  }
+  
+  printf("%d\n", cnt);
+  printf("%d\n", strlen(myString));
+  
+  return 0;
+}
+```
 
 
 
