--- a/Algorithm/lecture/AlgorithmStudy/L5.md
+++ b/Algorithm/lecture/AlgorithmStudy/L5.md
@@ -168,19 +168,112 @@ int main() {
 ### 삽입정렬의 개념
 
 * 원소를 차례대로 정렬된 배열에 삽입시킴
-* 
-
-
+* 바 : 왼쪽은 정렬이 다 되어있다는 의미
+* 바 오른쪽 값을 인접한 값과 비교하면서 적절한 위치에 두고 바를 오른쪽으로 한칸
 
 ### 삽입정렬의 구현
+
+```c
+//           i
+// 1 2 4 5 | 2 8 8 3 2
+//           j <- 넣을 때는 j를 씀
+// i가 가리키고 있는 값이 왼쪽으로 들어가야 함
+// 단, i 왼쪽의 모든 원소는 정렬이 되어 있음
+
+#include <stdio.h>
+
+int main() {
+  int n, data[100];
+  
+  scanf("%d", &n);
+  
+  for(int i=0; i<n; i++)
+    scanf("%d", &data[i]);
+    
+  for(int i=0; i<n; i++) {
+    // i가 가리키고 있는 값을 넣어야 한다.
+    // 단, i 왼쪽은 모두 정렬이 되어 있다.
+    for(int j=i; j>=1; j--) {
+      if(data[j-1] > data[j]) {
+        int temp;
+        temp = data[j-1];
+        data[j-1] = data[j];
+        data[j] = temp;
+      }
+      else break;
+    }
+    
+    // 데이터 찍어보기
+    for(int j=0; j<n; j++)
+      printf("%d ", data[j]);
+      
+    printf("\n");
+  }
+  
+  for(int i=0; i<n; i++)
+    printf("%d ", data[i]);
+    
+  return 0;
+}
+```
 
 
 
 ### 버블정렬의 개념
 
-
+* 바가 뒤에 있음 - 인접한 원소를 비교하여 큰 수를 뒤로 보냄 - 최댓값이 맨 뒤에 오면 바를 한칸 땡김
 
 ### 버블정렬의 구현
+
+```c
+#include <stdio.h>
+
+int main() {
+
+  int n, arr[100];
+  
+  scanf("%d", &n);
+  
+  for(int i=0; i<n; i++)
+    scanf("%d", &arr[i]);
+    
+  for(int i=0; i<n; i++) {
+    // n번 훑겠다!
+    // 1 7 10 8 3 2 9 7 3 8 4 |
+    // j
+    // j를 뒤로 하나씩 밀면서 인접한 두 수 비교
+    // j의 범위
+    // i=0 --> j = 0 ~ 9
+    // i=1 --> j = 0 ~ 8
+    // i=2 --> j = 0 ~ 7
+    // j = 0 ~ n-i-2
+    // 0 <= j <= n-i-2
+    
+    for(int j=0;j<n-i-1;j++){
+      if (arr[j] > arr[j+1]) {
+        int temp;
+        temp = arr[j];
+        arr[j] = arr[j+1];
+        arr[j+1] = temp;
+      }
+    }
+    
+    for(int j=0;j<n;j++) {
+      printf("%d ",arr[j]);
+    }
+    
+    printf("\n");
+  }
+  
+  
+  for(int i=0;i<n;i++)
+    printf("%d ", arr[i]);
+    
+  printf("\n");
+  
+  return 0;
+}
+```
 
 
 
@@ -188,37 +281,234 @@ int main() {
 
 ### 시간복잡도의 개념
 
+문제를 효율적으로 해결
 
+* 똑같은 문제를 해결해도 빠르게 해결하는 것이 중요
+* 같은 입력을 제공했을 때, 어떤 프로그램이 더 빠른가? (제한 시간을 둔다)
+* 내 프로그램은 얼마나 빠를까??
 
 ### 시간복잡도의 예제1
+
+시간복잡도
+
+* 프로그램이 대략적으로 몇 개의 명령을 수행하는가?
+
+```c
+// O(6) : 오더6. 대충 내 프로그램이 6개의 명령을 수행하는구나
+// O(1)이라고 표현함. 상수. O(1) = O(6) = O(100) = O(상수)
+#include <stdio.h>
+
+int main() {
+  int a;
+  int b, c;
+  
+  scanf("%d %d", &b, &c);
+  
+  a = b + c;
+  
+  printf("%d\n", a);
+
+  return 0;
+}
+```
+
+```c
+// O(n+5)
+// O(n)
+#include <stdio.h>
+
+int main() {
+  int n;
+  int sum = 0;
+  
+  scanf("%d", &n);
+  
+  for(int i=0; i<n; i++)  // n번 수행
+    sum += i;
+    
+  printf("%d\n", sum);
+  return 0;
+}
+```
+
+```c
+// O(n제곱 + n)
+// O(n제곱) <- 가장 영향력 있는 애만
+#include <stdio.h>
+
+int main() {
+  int n;
+  int sum = 0;
+  
+  scanf("%d", &n);
+  
+  for(int i=0; i<n; i++)
+    for(int j=0; j<n; j++)
+      sum += i+j;
+      
+  for(int i=0; i<n; i++)
+    sum += i;
+    
+  printf("%d\n", sum);
+  return 0;
+}
+```
 
 
 
 ### 시간복잡도의 예제2
 
+```c
+#include <stdio.h>
+
+int main() {
+  int n;
+  int sum = 0;
+  
+  scanf("%d", &n);
+  
+  // i=0 -> 0 ~ n-1  // n
+  // i=1 -> 1 ~ n-1  // n-1
+  // i=2 -> 2 ~ n-1  // n-2
+  //
+  // i=n-1 -> n-1 ~ n-1  // 1
+  // 1+ ... + n 만큼의 명령 수행
+  // n(n+1)/2
+  // O(n(n+1)/2)
+  // O(n제곱/2)
+  // O(n제곱)
+  
+  for(int i=0; i<n; i++)
+    for(int j=i; j<n; j++)
+      sum += i*j;
+      
+  printf("%d\n", sum);
+
+  return 0;
+}
+```
+
+```c
+// 항상 최악일 때. 최고차항
+// O(n)
+#include <stdio.h>
+
+int main() {
+  int n;
+  int sum = 0;
+  
+  scanf("%d", &n);
+  
+  for(int i=0;i<n;i++) {
+    if(i*i == n) {
+      printf("%d\n",i);
+      break;
+    }
+  }
+```
+
 
 
 ### 입력 크기에 따른 수행 시간
+
+명령 수행 수 vs 실제 시간
+
+* 명령을 많이 실행하면 시간도 오래 걸릴 것이다.
+* 구체적으로 얼마나 걸리는가?
+
+```c
+// O(n)
+#include <stdio.h>
+
+int main() {
+  int n, sum = 0;
+  
+  scanf("%d", &n);
+  
+  for(int i=1;i<=n;i++) {
+    sum = (sum +i) % n;
+  }
+  
+  printf("%d\n", sum);
+
+  return 0;
+}
+
+
+// O(n제곱)
+#include <stdio.h>
+
+int main() {
+  int sum = 0;
+  int n;
+  
+  scanf("%d", &n);
+  
+  for(int i=0; i<n; i++) {
+    for(int j=0; j<n; j++) {
+      sum = (sum+1) % (i+j+1);
+    }
+  }
+  
+  printf("%d\n", sum);
+  
+  return 0;
+}
+```
 
 
 
 ### O(n)의 실제 수행 시간
 
-
+* 입력n이 커지면 수행시간s 증가. 선형으로 증가. 
+* 완벽한 선형은 아님. 컴퓨터가 처리해야 하는 일이 많음.
 
 ### O(n^2)의 실제 수행 시간
 
-
+* 명령 수행 개수가 n제곱으로 증가
+* 곡선
+* O(n)과 O(n제곱)의 차이는 아주 크다
 
 ### 수행 시간을 어림짐작하기
 
-
+* 대략 1억번의 연산을 수행하면 1초가 걸린다.
+* 하지만 정확히 센 것은 아니므로 무조건 믿어서는 안됨
+* 앞으로 수행시간에 대한 감을 익히자
+* O(n) 1초
+* n = 1억
+* O(n제곱) 1초
+* n = 1만
+* n = 10만 1초 <- O(n제곱) 알고리즘 안됨
+* 문제에서 주어진 입력의 크기를 보고 시간 예측 가능
 
 ### 정렬의 시간복잡도
 
+선택정렬
+
+* 최솟값을 앞으로 이동시킴
+* 최솟값을 한 번 찾는데 O(n) 걸림
+* 최솟값을 n번 찾아야 함
+* O(n제곱)
+
+삽입정렬
+
+* 원소를 차례대로 정렬된 배열에 삽입시킴
+* 원소 하나를 삽입하는데 O(n) 걸림
+* 삽입을 n번 해야함
+* O(n제곱)
+
+버블정렬
+
+* 인접한 원소를 비교하여 큰 수를 뒤로 보냄
+* 맨 뒤의 숫자를 확정하는데 O(n) 걸림
+* n개의 숫자를 확정해야 함
+* O(n제곱)
+
+O(n제곱) - 1초에 n=10000
 
 
-k번째 큰 수 찾기
+
+### k번째 큰 수 찾기
 
 ```c
 
@@ -230,45 +520,265 @@ k번째 큰 수 찾기
 
 ### 정수론 소개
 
+기초 정수론
 
+정수 (Integer)
+
+-90 -3 0 1 5 8 10 14 15 19
+
+정수론 (Number theory)
+
+* 정수의 성질을 연구하는 분야
+* 약수와 배수
 
 ### 약수
 
+약수 (Divisor)
 
+* 특정 정수를 나누어 떨어지게 하는 수
 
 ### 약수 구하기 구현
+
+```c
+// 약수 구하기
+
+// 20
+
+// 1 2 4 5 10 20
+
+#include <stdio.h>
+
+int main() {
+  int n;
+  
+  scanf("%d", &n);
+  
+  for(int i=1;i<=n;i++) {
+    // 숫자 i가 n의 약수인지 판단
+    
+    if(n % i == 0) 
+      printf("%d ", i);
+  }
+  
+  printf("\n");
+
+  return 0;
+}
+```
 
 
 
 ### 소수
 
+소수 (Prime number)
+
+* 약수가 1과 자기 자신뿐인 정수
+* 2부터 n-1까지 나누어보고 하나라도 나누어 떨어지면 소수가 아니고 그렇지 않으면 소수
+
 
 
 ### 소수 판별 구현
+
+```c
+// 소수 판별
+
+#include <stdio.h>
+
+int main() {
+  bool flag = false;
+  // flag가 true면, 소수가 아니라는 말.
+  // flag가 false면, 소수라는 말.
+  int n;
+  
+  scanf("%d", &n);
+  
+  for(int i=2; i<=n-1; i++) {
+    if(n%i==0) {
+      flag = true;
+    }
+  }
+  
+  if(flag == true) printf("No\n");
+  else printf("Yes\n");
+  
+  return 0;
+}
+```
 
 
 
 ### 에라토스테네스의 체
 
+* 소수를 구하는 방법 중 하나
+* O(n log n)
+
 
 
 ### 소인수 분해
+
+소인수 분해 (Prime factorization)
+
+* 숫자 N을 소수의 곱으로 나타냄
+* 소수의 리스트 알 필요 없이 2부터 나눠보면 됨(어차피 소수만 나옴)
 
 
 
 ### 소인수 분해 구현
 
+```c
+// 소인수 분해
+
+// 180
+// 2 2 3 3 5
+
+// i = 2 3 4 5 6 7 8 9 10 ..
+
+#include <stdio.h>
+
+int main() {
+  int n;
+  
+  scanf("%d", &n);
+  
+  for(int i=2; n>1;) {  // n!=1
+    if(n % i == 0) {
+      printf("%d ", i);
+      n /= i;
+    }
+    else i++;
+  }
+  
+  printf("\n");
+  
+  return 0;
+}
+```
+
 
 
 ### 유클리드 호제법
+
+공약수와 공배수. 공=같다
+
+* A와 B의 공약수
+
+  A의 약수이면서 동시에 B의 약수인 수
+
+* A와 B의 공배수
+
+  A의 배수이면서 동시에 B의 배수인 수
+
+최대공약수와 최소공배수
+
+* A와 B의 최대공약수 GCD(Greatest Common Divisor)
+
+  A의 약수이면서 동시에 B의 약수인 수 중 최댓값
+
+* A와 B의 최소공배수 LCM (Lowest Common Multiplier)
+
+  A의 배수이면서 동시에 B의 배수인 수 중 최솟값
+
+유클리드 호제법
+
+* 최대공약수를 구하기 위한 알고리즘
+
+```c 
+a      b      r <- a를 b로 나눈 나머지
+152   68     20
+ 68   20      8
+ 20    8      4
+  8    4
+```
 
 
 
 ### 최대공약수와 최대공배수 구현
 
+```c
+// 유클리드 호제법
+
+//   a    b    r
+// 158   86   72
+//  86   72   14
+//  72   14    7
+//  14    2    0
+
+#include <stdio.h>
+
+// 2  |  168  86
+//    -----------
+//        84  43
+
+// A B    G(최대공약수)
+// A = aG, a = A/G
+// B = bG, b = B/G
+// L = abG
+
+int main() {
+  int a, b;
+  int A, B;  // a와 b의 원본을 저장
+  int GCD, LCM;
+  
+  scanf("%d %d", &a, &b);
+  
+  A = a;
+  B = b;
+  
+  while(1) {
+    int r = a % b;
+    
+    if(r == 0) {
+      GCD = b;
+      break;
+    }
+    
+    a = b;
+    b = r;
+  }
+  
+  printf("%d\n", GCD);
+
+  LCM = (A/GCD) * (B/GCD) * GCD;
+  
+  printf("%d\n", LCM);
+  
+  return 0;
+}
+```
+
 
 
 ### 파스칼 삼각형
+
+조합과 관련
+
+```c
+1  2  3
+12
+13
+23    3C2 = 3  Combination
+      5C3 = 10
+```
+
+
+
+```c
+              1
+            1   1
+          1   2   1
+        1   3   3   1   3C0  3C1  3C2  3C3
+      1   4   6   4   1   4C0  4C1  4C2  4C3  4C4
+    1   5   10  10  5   1    5C0  5C1  5C2  5C3  5C4  5C5
+  1   6   15  20  15  6   1
+1   7   21  35  35  21  7   1
+```
+
+```c
+20C10 = 20! / 10!*10!
+20C11 = 20! / 11!*9!
+20C12 = XXXX123
+파스칼의 삼각형을 이용하면 덧셈만으로 구할 수 있음
+```
 
 
 
