--- a/Algorithm/lecture/AlgorithmStudy/L6.md
+++ b/Algorithm/lecture/AlgorithmStudy/L6.md
@@ -267,7 +267,21 @@ int main() {
 
 ### strcmp
 
+strcmp(A, B)
 
+같으면 0 반환
+
+다를 경우 사전 순으로 누가 더 빠른지에 대한 정보 반환
+
+음수가 반환 : A가 B보다 사전순으로 앞선다
+
+양수가 반환 : B가 A보다 사전순으로 앞선다
+
+* 두 문자열이 같은지를 비교
+
+  1) 길이가 같아야 함
+
+  2) 위치별 문자가 같아야 함
 
 ### strcmp의 구현
 
