--- a/Algorithm/lecture/AlgorithmStudy/L6.md
+++ b/Algorithm/lecture/AlgorithmStudy/L6.md
@@ -282,20 +282,178 @@ strcmp(A, B)
   1) 길이가 같아야 함
 
   2) 위치별 문자가 같아야 함
+  
+  
 
 ### strcmp의 구현
+
+```c
+// 안됨
+
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+  char A[100], B[100];
+  
+  scanf("%s", A);
+  scanf("%s", B);
+  
+  int lenA, lenB;
+  
+  lenA = strlen(A);
+  lenB = strlen(B);
+
+  if(lenA == lenB) {
+    bool flag = false;
+    
+    for(int i=0; i<lenA; i++) {
+      if(A[i] != B[i])
+        flag = true;
+    }
+    
+    if(flag = true) {
+      printf("Different!\n");
+    }
+    else { 
+      printf("Same!\n");
+    }
+  }
+  else {
+    printf("Different!\n");
+  }
+
+  return 0;
+}
+```
+
+```c
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+  char A[100], B[100];
+  
+  scanf("%s", A);
+  scanf("%s", B);
+  
+  if(strcmp(A, B) == 0) printf("Same!\n");
+  else printf("Different!\n");
+  
+  return 0;
+}
+```
 
 
 
 ### strcpy
 
+strcpy(A, B)
+
+* 문자열 B를 A에 복사
+
+```c
+0 1 2 3 4 5   6  7 8 9 10
+P e o p l e '\0'
+0 1 2 3   4  5 6 7 8 9 10
+S t a r '\0'
+
+strcpy(A, B) 하면
+0 1 2 3   4  5   6  7 8 9 10
+S t a r '\0' e '\0'
+0 1 2 3   4  5 6 7 8 9 10
+S t a r '\0'
+
+// '\0'은 문자열 끝을 의미하므로 A도 결국 Star를 가지고 있다고 판단
+// 구현은 널문자를 옮길 때까지 단어 하나하나를 복사하면 됨
+```
+
 
 
 ### strcpy의 구현
 
+```c
+// strcpy
+
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+  char A[100];
+  char B[100];
+  
+  scanf("%s", A);
+  scanf("%s", B);
+  
+  printf("%s\n", A);
+  printf("%s\n", B);
+  
+  int lenB = strlen(B);
+  // "Star"
+  // 문자 추가
+  for(int i=0; i<lenB; i++) {
+    A[i] = B[i];
+  }
+  
+  A[lenB] = '\0';  // 널문자 추가
+  
+  printf("%s\n", A);
+  printf("%s\n", B);
+  
+  return 0;
+}
+```
+
+```c
+// strcpy
+
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+  char A[100];
+  char B[100];
+  
+  scanf("%s", A);
+  scanf("%s", B);
+  
+  printf("%s\n", A);
+  printf("%s\n", B);
+  
+  strcpy(A, B);
+  
+  printf("%s\n", A);
+  printf("%s\n", B);
+  
+  return 0;
+}
+```
+
 
 
 ### 문자열 입력에 대한 Tip
+
+```c
+scanf("%s", arr);
+문자열을 입력 받을 때 스페이스, 엔터, 탭 키를 누를 때까지의 문자열이 입력된다.
+예시
+arrA와 arrB 두 문자형 배열에
+>watermelon<
+>melon<
+을 입력받기 위해
+scanf("%s\n%s", arrA, arrB); 혹은 scanf("%s %s", arrA, arrB);
+아예 둘로 나누어
+scanf("%s", arrA);
+scanf("%s", arrB);
+와 같은 형식으로도 입력받을 수 있다.
+fgets(arr, 입력받을 수 있는 최대 문자수, stdin);
+엔터키가 입력되기 전까지의 모든 문자열(공백 포함)이 입력된다.
+예시
+>Please do not touch anything<
+을 입력받기 위해
+fgets(arr,1005,stdin);
+을 사용한다면 Please~anything\n 까지의 공백을 포함한 전체 문자열을 입력받을 수 있다.
+```
 
 
 
@@ -363,41 +521,372 @@ strcmp(A, B)
 
 ### 함수의 개념 및 예제 1
 
+함수
+
+수학에서 어떤 숫자가 들어왔을 때 처리를 해서 출력하는 것
+
+ex) f(x) = x + 4  /  f(x) = x의 약수의 개수  //  f(x) = x와 y의 최대공약수
+
+* 값을 입력받아 특정 연산을 수행하여 결과를 반환
+
+```c
+#include <stdio.h>
+
+// first와 second를 입력 받음
+// 숫자 두개를 입력 받아서 그 두 수의 합을 반환하는 함수
+int getSum(int first, int second) {
+  return first + second;  // first + second을 내보냄
+}
+
+
+int main() {
+  int a, b;
+  int result;
+  
+  scanf("%d %d", &a, &b);
+  
+  result = getSum(a, b);  // result = a + b
+  
+  printf("%d\n", result);
+  
+  return 0;
+}
+```
+
 
 
 ### 함수의 용어
+
+함수의 기본 형태 및 용어
+
+```c
+// int : 반환 형(return type). 출력하는 애 형태가 int라는 의미
+// getSum : 함수의 이름
+// int a, int b, int c : 인자. 입력 정보. 이 함수 안에서 변수 a, b, c라고 부름
+int getSum(int a, int b, int c) {
+  return a+b+c;   // body(몸)  // return 값을 반환  // a + b + c (int)
+}
+```
 
 
 
 ### 함수의 실행예제
 
+```c
+#include <stdio.h>
+
+// a값과 b값이 first와 second로
+int getSum(int first, int second) {
+  return first + second;
+}
+
+// int 반환형
+// main 함수 이름
+// 메인 함수가 무조건 먼저 실행!
+int main() {
+  int a, b;  // a와 b 변수가 잡힘
+  int result;  // result 변수가 잡힘
+  
+  scanf("%d %d", &a, &b);
+  
+  result = getSum(a, b);  // result가 getSum에게 값을 내놓으라고 함
+                          // getSum 값을 구하기 위해 getSum으로 감
+                          // 반환되는 값을 result에
+  
+  printf("%d\n", result);
+
+  return 0;
+}
+```
+
 
 
 ### 함수의 실행예제2
+
+```c
+#include <stdio.h>
+
+// [getMin] : 둘 중 작은 값을 반환하는 함수
+int getMin(int first, int second) {
+  if(first < second) {
+    return first;
+  }
+  else {
+    return second;
+  }
+}
+
+int main() {
+  int a, b;
+  int result;
+  
+  scanf("%d %d", &a, &b);
+  
+  result = getMin(a, b);
+  printf("%d\n", result);
+  
+  return 0;
+}
+```
 
 
 
 ### 스코프의 개념 및 예제1
 
+스코프 [Scope] (범위)
+
+변수는 선언된 {블록} 내에서만 접근할 수 있다
+
 
 
 ### 스코프의 개념 및 예제2
+
+```c
+#include <stdio.h>
+
+// [getMin] : 둘 중 작은 값을 반환하는 함수
+int getMin(int first, int second) {
+  if(first < second) {
+    return first;
+  }
+  else {
+    return second;
+  }
+}
+
+int main() {
+  int a, b;
+  int result;
+  
+  scanf("%d %d", &a, &b);
+  
+  result = getMin(a, b);
+  printf("%d\n", result);
+  
+  return 0;
+}
+
+/*
+
+a  b  result
+9  7            main  // first, second를 볼 수 없다(변수 접근, 활용 불가)
+-------------------------------------------------------------------------
+first  second
+  9      7      getMin  // a, b, result를 볼 수 없다
+
+*/
+```
 
 
 
 ### 스코프의 의미
 
+스코프 [Scope]
+
+* 변수는 선언된 블록 내에서만 접근할 수 있다
+  * 함수간 작업의 완벽한 분담을 위해 존재함. 서로 영향을 전혀 끼치지 않음 [서로가 독립된 상태]
+
+완벽한 작업 분담  
+
+```c
+대장(집안일 시킴) => A(화분에 물), B(방 청소), C(개 산책), D(설거지)
+* 서로에게 영향을 받으면 각각의 함수에 집중할 수 없다
+* 완벽한 작업 분담 -> 일이 복잡하게 꼬이는 것을 방지함
+
+대장
+int main() {
+  WaterPot();
+  CleanRoom();
+  WalkDog();
+  WashingDish();
+}
+
+화분에 물
+int WaterPot() {
+  ...
+}
+
+방 청소
+int CleanRoom() {
+  ...
+}
+
+개 산책
+int WalkDog() {
+  ...
+}
+
+설거지
+int WashingDish() {
+  ...
+}
+
+```
+
 
 
 ### 작업 분담의 예제1
+
+함수간 완벽한 작업 분담
+
+```c
+#include <stdio.h>
+
+int getMin(int first, int second) {
+  if(first < second)
+    return first;
+  else
+    return second;
+}
+// ----------------------------------- 서로 볼 수 없음
+int main() {
+  int a, b, result;
+  scanf("%d %d", &a, &b);
+  result = getMin(a, b);  // getMin이 일 끝날 때까지 기다리고 있다가 일 끝내고 나온 값 받음
+  printf("%d\n", result);
+  return 0;
+}
+```
 
 
 
 ### 작업 분담의 예제2
 
+```c
+#include <stdio.h>
+
+// '*'을 c개 출력하는 함수
+// void : 비어있다(=없다). 반환하는 값이 없을 때
+void printStars(int c) {
+  for(int i=0; i<c; i++) {  // main 안에 i와 다름. 우연히 이름만 같을 뿐.
+    printf("*");
+  }
+}
+
+int main() {
+  int n;
+  scanf("%d", &n);
+  
+  for(int i=0; i<n; i++) {
+    printStars(n);  // printStars 너 할일 해. 난 일 끝날 때까지 기다릴께.
+    printf("\n");
+  }
+  return 0;
+}
+```
+
+```c
+#include <stdio.h>
+
+// '*'을 c개 출력하는 함수
+// void : 비어있다(=없다). 반환하는 값이 없을 때
+void printStars(int c) {
+  // printStarts가 별 c(<-n)개를 제대로 출력한다
+  for(int i=0; i<c; i++) {  // main 안에 i와 다름. 우연히 이름만 같을 뿐.
+    printf("*");
+  }
+}
+
+int main() {
+  // 가로 n개, 세로 n개의 "*"을 출력하는 프로그램
+  
+  int n;
+  scanf("%d", &n);
+  
+  for(int i=0; i<n; i++) {
+    // 별을 n개 출력하는 것
+    printStars(n);  // printStars 너 할일 해. 난 일 끝날 때까지 기다릴께.
+    // printStarts(i+1); // 출력되는 별 수가 1씩 증가. 삼각형 모양 
+    printf("\n");
+  }
+  return 0;
+}
+```
+
 
 
 ### 함수 예제1
+
+[예제] 삼각형 출력 2
+
+```
+입력의 예 5
+
+출력의 예
+    *
+   **
+  ***
+ ****
+*****
+```
+
+손으로 어떻게 풀지?
+
+키보드에서 손을 떼고 나의 머릿속에서 논리를 만들자
+
+누가 나한테 N=5라고 시키면, 내가 손으로 어떻게 삼각형을 그릴까?
+
+공백을 4개 출력한다. 별을 1개 출력한다. 한 줄을 띄운다.
+
+공백을 3개 출력한다. 별을 2개 출력한다. 한 줄을 띄운다.
+
+공백을 2개 출력한다. 별을 3개 출력한다. 한 줄을 띄운다.
+
+공백을 1개 출력한다. 별을 4개 출력한다. 한 줄을 띄운다.
+
+공백을 0개 출력한다. 별을 5개 출력한다. 한 줄을 띄운다.
+
+```c
+/*
+
+입력의 예 5
+
+출력의 예
+    *
+   **
+  ***
+ ****
+*****
+
+*/
+
+#include <stdio.h>
+
+void printSpace(int s) {
+  // 공백을 n개 출력
+  for(int i=0; i<s; i++) {
+    printf(" ");
+  }
+}
+
+void printStar(int s) {
+  // 별을 n개 출력
+  for(int i=0; i<s; i++) {
+    printf("*");
+  }
+}
+
+void printNewLine() {
+  printf("\n");
+}
+
+int main() {
+  
+  int n;
+  scanf("%d", &n);
+  
+  // printSpace(k) : 공백을 k개 출력하는 함수
+  // printStar(k) : 별을 k개 출력하는 함수
+  // printNewLine() : 줄 띄우기를 출력하는 함수
+  for(int i=0; i<n; i++) {
+    printSpace(n-i-1);  // 공백 4 -> 3 -> 2 -> 1 -> 0
+    printStar(i+1);  // 별 1 -> 2 -> 3 -> 4 -> 5 
+    printNewLine();  // 줄 하나 띄우기
+  }
+
+  return 0;
+}
+```
 
 
 
@@ -405,41 +894,222 @@ strcmp(A, B)
 
 ### 포인터의 개념과 예제
 
+컴퓨터 공부에 있어 어려운 요소
+
+* 포인터 (Pointer)
+
+  컴퓨터 내부에 대해 알아야 함
+
+* 재귀호출 (Recursion) ☆
+
+  방법을 확장
+
+
+
+포인터
+
+* 값을 저장하는 것이 아닌, 값의 위치를 저장하는 변수
+
+```c
+#include <stdio.h>
+
+int main() {
+  
+  // int* : int형 변수의 주소를 담는 type
+  int* myPointer;  // 다른 int형 변수의 위치(주소)를 담는 변수
+  int a;
+  
+  a = 5;
+  myPointer = &a;  // &a : a의 주소
+  
+  // *변수 : 이 변수가 갖고 있는 주소를 따라가서 그 값을 내놓아라
+  printf("%d\n", *myPointer);  // *myPointer 주소가 가리키는 값을 출력하라
+
+  return 0;
+}
+```
+
 
 
 ### 포인터의 구현 예제
+
+```c
+#include <stdio.h>
+
+int main() {
+  int* address;  // address가 가리키는 변수는 int형 변수라는 의미
+  int x;
+  
+  x = 3;
+  address = &x;  // address에 x의 주소를 넣기
+  
+  printf("%p\n", address);  // 주소를 출력할 때는 %p. address가 가지고 있는 값. 16진수 나옴.
+  printf("%d\n", *address);  // address가 가리키는 값을 출력
+  
+  return 0;
+}
+```
 
 
 
 ### 포인터 정리
 
-
+* 변수를 가리키는 역할을 함(주소의 변수를 담는 변수)
+  * int* = int형 변수를 가리키겠다는 것
+  * 가리키다 = 변수의 주소를 저장한다
+* 문법
+  * int* x : int형 변수를 가리키는 변수 x
+  * &x : x의 주소
+  * *x : x가 가리키는 변수의 값
 
 # 5. 메모리 (memory)
 
+
+
 ### 컴퓨터의 추상적 그림
 
+* 포인터 (Pointer) : 컴퓨터 내부 중에서도 저장장치(메모리)에 관한 것
 
+  * 입력장치(키보드/마우스) 
+
+  * 출력장치(모니터/오디오)
+
+  * 연산장치(값을 받아서 처리(계산)하는 부분) - ''저장'' / 계산
+
+  
 
 ### 자료의 저장 단위
+
+* 비트(Bit) : 정보의 가장 작은 단위. 0 혹은 1을 담음
+
+  ex) 1비트 - 0혹은 1을 담는 1개의 저장공간
+
+  ​      2비트 - 0혹은 1을 담는 2개의 저장공간
+
+  ​      3비트 - 0혹은 1을 담는 8개의 저장공간
+
+* 바이트(Byte) : 정보의 기본 단위. 8개의 비트로 이루어짐.
+
+  ex) int - 4byte  /  double - 8 byte
+
+* 킬로바이트(KB) : 1000개의 바이트로 이루어짐.
+
+* 메가바이트(MB) : 1000개의 KB로 이루어짐.
+
+* 기가바이트(GB) : 1000개의 MB로 이루어짐.
 
 
 
 ### RAM과 NUMA architecture
 
+RAM (Random Access Memory) : 무작위로 접근하는 메모리
+
+* 자료를 저장하기 위한 장치
+
+  특정 공간에 있는 값을 access하는데 걸리는 시간이 비슷하다
+
+* Random 무작위
+
+* Access 접근
+
+* Memory 메모리
+
+```
+Cpu Cpu
+Cpu Cpu <- processor가 네개
+
+Cpu하나 안에 여러개의 core가 들어있을 수 있음.
+core가 일을 하는 하나의 단위.
+하나의 core는 하나의 일을 할 수 있음.
+
+멀티코어프로세스(멀티코어 환경)
+정보를 전달하기 위해 거쳐야하는 길이가 다름 
+=> 1번 CPU가 특정 위치에 있는 값을 가져올 때와 3번 CPU가 특정 위치에 있는 값을 가져올 때 다름. 메모리에 access하는 시간이 다름. Random Access Memory가 안됨
+
+NUMA(None Uniform Memory Access) 균일하지 않다
+```
+
 
 
 ### Pointer 사용에 따른 메모리 변화
 
+RAM (Random Access Memory) : 무작위로 접근하는 메모리
+
+- 자료를 저장하기 위한 장치
+
+```
+16진수 : 0부터 15까지 담을 수 있다
+        = 16개의 숫자를 담기 위해서는 4비트 필요
+        
+RAM          Address
+00000011     0x7ffeed00595c  12 X 4 = 48  // 하나의 공간에 대한 주소는 48비트
+00000000     0x7ffeed00595d  // 각각의 공간에는 1byte(=8bit)가 들어감
+00000000     0x7ffeed00595e
+00000000     0x7ffeed00595f
+             0x7ffeed005950
+01011100 5c  0x7ffeed005951
+01011001 59  0x7ffeed005952
+00000000 00  0x7ffeed005953
+11101101 ed  0x7ffeed005954
+11111110 fe  0x7ffeed005955
+01111111 7f  0x7ffeed005956
+00000000     0x7ffeed005957
+00000000     0x7ffeed005958
+
+// 64bit 운영체제라는 것은 하나의 공간에 할당되는 주소가 64개의 비트로 이루어져있다는 것
+// 나머지 16bit는? 컴퓨터가 64(2의 64승개의 공간)비트 모두 쓸 필요가 없어서 48개만 씀
+```
+
+```c
+#include <stdio.h>
+
+int main() {
+  int* myPointer;  // 주소를 담음. 48bit(=6byte)를 담아야 함.
+                   // 주소가 48bit만 쓰는거지 실제 주소는 8byte 담아야함
+                   // 961 ~ 968까지
+  int a;  // int형은 4byte. 공간 4개. 95c ~ 95f. 4개의 공간을 활용하여 숫자 1개를 표현하겠다.
+  
+  a = 3;  // 4개의 공간이 한개의 숫자를 표현. 3 --2진수--> 00000000 00000000 00000000 00000011 <- 실제 컴퓨터에서는 거꾸로 들어가서 숫자 읽을 때 밑에서 위로 읽음
+  myPointer = &a;  // myPointer(공간 8byte 갖고 있음)에다가 0x7ffeed00595c
+  
+  printf("%d\n", *myPointer);  // myPointer가 가리키는 값을 출력
+  printf("%p\n", myPointer);  // myPointer가 갖고 있는 값(주소)을 출력
+
+  return 0;
+}
+```
 
 
-### Big Endian과 Little Endian
+
+### Big Endian(거꾸로 저장. 높은 주소에 낮은 자리)과 Little Endian(높은 자리에 높은 숫자 기록)
+
+* 컴퓨터가 값을 저장하는 순서
+
+a에 1,342,345(00000000 00010100 01111011 10001001(2))를 저장한다면
+
+Big Endian으로 저장한다면 낮은 메모리 공간(595c)에 높은 숫자를 저장. 거꾸로
+
+낮은 숫자를 낮은 메모리 공간에 저장하면 Little Endian
+
+컴퓨터 디자인하는 입장에서는 선택해서 구현해야함.
 
 
 
 ### 운영체제와 기억장소 할당
 
+변수를 선언하게되면 구체적으로 무슨 일이 일어나는가?
 
+운영체제(Operating System)
+
+* 하드웨어를 제어하기 위한 소프트웨어
+* User <=> Application <=> Operating System <=> Hardware
+
+기억장소 할당(Memory공간 Allocation할당)
+
+* 변수에 값을 담기 위한 과정
+  1. 프로그램이 운영체제에게 필요한 공간의 양을 알려준다.
+  2. 운영체제가 그 만큼의 공간을 예약한다. (다른 프로그램이 해당 공간을 쓰지 못하게 한다.)
+  3. 운영체제가 프로그램에게 해당 공간을 대표하는 주소를 반환한다.
 
 # 6. 포인터와 배열 (pointer & array)
 
