--- a/Algorithm/lecture/AlgorithmStudy/L7.md
+++ b/Algorithm/lecture/AlgorithmStudy/L7.md
@@ -4,9 +4,92 @@
 
 ### 재귀함수의 정의
 
+재귀함수☆ 컴퓨터공학 고유의 것
 
+함수
+
+* 값을 입력받아 특정 연산을 수행하여 결과를 반환
+
+```c
+#include <stdio.h>
+
+int getSum(int first, int second) {
+  return first+second;
+}
+
+int main() {
+  int a, b;
+  int result;
+  
+  scanf("%d %d", &a, &b);
+  
+  result = getSum(a, b);  
+  
+  printf("%d\n", result);
+  
+  return 0;
+}
+```
+
+함수 요약
+
+* 함수의 기본 형태
+
+  반환 형, 함수 이름, 인자, 값 반환
+
+* 스코프는 함수간 작업의 완벽한 분담을 위해 존재한다
+
+* 의미단위의 프로그래밍을 해야한다
+
+  문제 해결을 위해 어떤 일을 하는 함수가 필요한지를 설계
+
+재귀함수
+
+* 자기 자신을 부르는 함수
+
+  ```c
+  int main() {
+      main();
+      
+      return 0;
+  }
+  ```
+
+  
 
 ### 재귀함수가 의미있는 예제
+
+```c
+#include <stdio.h>
+
+// getFactorial(n) : n! 을 반환하는 함수
+int getFactorial(int n) {
+  if(n == 0)
+    return 1;
+  else
+    return n * getFactorial(n-1);
+}
+
+int main() {
+  int n;
+  scanf("%d", &n);
+  printf("%d\n", getFactorial(n));  // getFactorial(n)이 반환하는 숫자를 출력 
+}
+
+/*
+main()  n 4  // getFactorial(4) 기다림
+-------------------------------------------------------------------------
+getFactorial(4)  n 4    // getFactorial(3)을 기다리고 있음. 값을 알아야해서
+-------------------------------------------------------------------------
+getFactorial(3)  n 3    // scope이 다름. 다른 변수.
+-------------------------------------------------------------------------
+getFactorial(2)  n 2
+-------------------------------------------------------------------------
+getFactorial(1)  n 1
+-------------------------------------------------------------------------
+getFactorial(0)  n 0    // 나를 부른 애(getFactorial(1)에게 1 return
+*/
+```
 
 
 
